# python-Code

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TRANSFORMATION_SUMMARY.md  codes_for_fun  pyproject.toml  random_range  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: README.md  api_reference.md  development_guide.md  getting_started.md
examples/: README.md  poets_demo.py  utility_functions_demo.py  visualization_demo.py
src/: __init__.py  codes_for_fun.py  poets.py  random_range.py
tests/: __init__.py  test_codes_for_fun.py  test_poets.py  test_random_range.py
